English version added

--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
                     <div>pop'n music 25 peace</div>
                 </div>
             </a>
-            <a href="popn26kaimeiriddles.html" class="gameicon">
+            <a href="popn25peaceEnglish.html" class="gameicon">
                 <div>
                     <img src="img/peace.png">
-                    <div>pop'n music 26 解明リドルズ</div>
+                    <div>pop'n music 25 Peace English</div>
                 </div>
             </a>
             <a href="reflecbeat-groovin-upper.html" class="gameicon">
