--- a/popn25peaceEnglish.html
+++ b/popn25peaceEnglish.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
         window.addEventListener("load", function () {
             new PatchContainer([
-                new Patcher("popn22.dll", "2020-09-28-00_English_ver_1", [
+                new Patcher("popn22.dll", "2020-09-28-00 English ver 0.1", [
                     {
                         name: "E: Drive Fix",
                         tooltip: "Fix crash caused by no E: drive",
